Fixes broken CSS that was hiding schedule X button

--- a/Paco-Server/ear/default/web/css/groups.css
+++ b/Paco-Server/ear/default/web/css/groups.css
@@ -94,19 +94,19 @@
   margin-top: 24px;
 }
 
-.header .button.add {
+.section .button.add {
   background: url('../img/ic_add_circle_outline_24px.svg') no-repeat;
 }
 
-.header .button.up {
+.section .button.up {
   background: url('../img/ic_arrow_up_24.svg') no-repeat;
 }
 
-.header .button.down {
+.section .button.down {
   background: url('../img/ic_arrow_down_24.svg') no-repeat;
 }
 
-.header .button {
+.section .button {
   float: right;
   height: 24px;
   margin-left: 8px;
@@ -114,7 +114,7 @@
   width: 24px;
 }
 
-.header .button:hover {
+.section .button:hover {
   opacity: 1;
 }
 
